--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
       lang="en">
   <head>
     <meta charset="UTF-8">
@@ -7,8 +8,8 @@
   </head>
   <body>
     <h3>welcome to <i>admin</i> main page</h3>
-    <!--<a th:href="@{firstmarket/admin/books}">Books Manager</a>-->
-    <a href="/firstmarket/admin/books">Books Manager</a>
+    <a th:href="@{firstmarket/admin/books}">Books Manager</a>
+    <!--<a href="/firstmarket/admin/books">Books Manager</a>-->
     <br/>
     <!--<a href="/firstmarket/fc/admin/categories/categoriesManager">Categories Manager</a>-->
   </body>
