Added simple book validation. Closes #1. Added context path property = '/firstmarket'

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <h3>welcome to <i>admin</i> main page</h3>
-    <a th:href="@{firstmarket/admin/books}">Books Manager</a>
-    <!--<a href="/firstmarket/admin/books">Books Manager</a>-->
+    <a th:href="@{/admin/books}">Books Manager</a>
     <br/>
-    <!--<a href="/firstmarket/fc/admin/categories/categoriesManager">Categories Manager</a>-->
   </body>
 </html>
