--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Books Manager</h1>
-    <p><a href="/firstmarket/admin">go back</a></p>
-    <p><a href="/firstmarket/admin/newBook">new book</a></p>
+    <p><a th:href="@{/admin}">go back</a></p>
+    <p><a th:href="@{/admin/newBook}">new book</a></p>
     <p>Please, to edit some book just click on the ISBN reference</p>
     <br/>
     <table border="1">
@@ -19,7 +19,7 @@
         <!--<td><b>Category</b></td>-->
         </tr>
         <tr th:each="book : ${books}">
-          <td><a th:href="@{/firstmarket/admin/editBook(isbn=${book.isbn})}"><span th:text="${book.isbn}">isbn</span></a></td>
+          <td><a th:href="@{/admin/editBook(isbn=${book.isbn})}"><span th:text="${book.isbn}">isbn</span></a></td>
           <td><span th:text="${book.title}">title</span></td>
           <!--<td><span th:text="${book.category.name}">category name</span></td>-->
       </tr>
