added nested structure on categories

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Admin</title>
+    <link rel="stylesheet" th:href="@{/styles.css}" />
   </head>
   <body>
     <h3>welcome to <i>admin</i> main page</h3>
