--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -6,25 +6,103 @@
         <meta charset="UTF-8">
         <title>Categories Manager</title>
         <link rel="stylesheet" th:href="@{/styles.css}" />
-        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            body {
+                font-family: "Lato", sans-serif;
+            }
+
+            /* Fixed sidenav, full height */
+            .sidenav {
+                height: 100%;
+                width: 250px;
+                position: fixed;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                background-color: #111;
+                overflow-x: hidden;
+                padding-top: 20px;
+            }
+
+            /* Style the sidenav links and the dropdown button */
+            .sidenav a, .dropdown-btn {
+                padding: 6px 8px 6px 16px;
+                text-decoration: none;
+                font-size: 15px;
+                color: #818181;
+                display: block;
+                border: none;
+                background: none;
+                width: 100%;
+                text-align: left;
+                cursor: pointer;
+                outline: none;
+            }
+
+            /* On mouse-over */
+            .sidenav a:hover, .dropdown-btn:hover {
+                color: #f1f1f1;
+            }
+
+            /* Main content */
+            .main {
+                margin-left: 250px; /* Same as the width of the sidenav */
+                font-size: 20px; /* Increased text to enable scrolling */
+                padding: 0px 10px;
+            }
+
+            /* Add an active class to the active dropdown button */
+            .active {
+                background-color: green;
+                color: white;
+            }
+
+            /* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+            .dropdown-container {
+                display: none;
+                background-color: #262626;
+                padding-left: 8px;
+            }
+
+            /* Optional: Style the caret down icon */
+            .fa-caret-down {
+                float: right;
+                padding-right: 8px;
+            }
+
+            /* Some media queries for responsiveness */
+            @media screen and (max-height: 450px) {
+                .sidenav {padding-top: 15px;}
+                .sidenav a {font-size: 18px;}
+            }
+        </style>-->
     </head>
     <body>
-        <h1>Categories Manager</h1>
+    <div class="sidenav" th:utext="${categoriesOnHtml}"/>
+    <div class="main">
+        <h2>Category Manager</h2>
         <p><a th:href="@{/admin}">go back</a></p>
         <p><a th:href="@{/admin/newCategory}">new category</a></p>
-        <p>Please, to edit some category just click its reference</p>
-        <br/>
-        <table border="1">
-            <tr>
-                <td><b>Id</b></td>
-                <td><b>Name</b></td>
-                <td/>
-            </tr>
-            <tr th:each="node : ${rootNode}">
-                <td><a th:href="@{/admin/editCategory/{id}(id=${node.data.id})}"><span th:text="${node.data.id}">id</span></a></td>
-                <td><span th:text="${node.data.name}">name</span></td>
-                <td><a th:href="@{/admin/deleteCategory/{id}(id=${node.data.id})}">Delete</a></td>
-            </tr>
-        </table>
+        <p>Please, to edit some category just click on its link</p>
+    </div>
+    <script>
+        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+        var dropdown = document.getElementsByClassName("dropdown-btn");
+        var i;
+
+        for (i = 0; i < dropdown.length; i++) {
+            dropdown[i].addEventListener("click", function() {
+                this.classList.toggle("active");
+                var dropdownContent = this.nextElementSibling;
+                if (dropdownContent.style.display === "block") {
+                    dropdownContent.style.display = "none";
+                }
+                else {
+                    dropdownContent.style.display = "block";
+                }
+            });
+        }
+    </script>
     </body>
 </html>
