working on edit category functionality

--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -4,7 +4,7 @@
       lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Book Edition Page</title>
+        <title>Book Edition</title>
         <link rel="stylesheet" th:href="@{/styles.css}" />
     </head>
     <body>
