Added (Category)parent property to class Category, and all simplifications implied. Added management of GET request on /editCategory/{id}, and built editCategory.html view with descendants disabled and parent preselected

--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -21,9 +21,10 @@
             <br/>
             <div>
                 <span>Nested under:</span>
-                <select th:field="*{id}">
-                    <option th:each="ic : ${indentedCategories}" th:value="${ic.id}" th:text="${ic.name}">
-                    </option>
+                <select th:field="*{parent.id}">
+                    <option th:each="ic : ${indentedCategories}"
+                            th:value="${ic.id}"
+                            th:text="${ic.name}"/>
                 </select>
             </div>
             <br/>
