--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -8,76 +8,35 @@
         <link rel="stylesheet" th:href="@{/styles.css}" />
     </head>
     <body>
-    <h1>Category Edition Page</h1>
-    <form action="#" th:action="@{/admin/editCategory}" th:object="${category}" method="post">
-        <fieldset>
-            <div th:if="${#fields.hasErrors()}">
-                <span class="validationError">Please correct the problems below and resubmit.</span>
-            </div>
-            <legend>Edit Category</legend>
-            <input type="hidden" th:field="*{id}"/>
-            <div>
-                <span>Name:<input type="text" th:field="*{name}"/></span>
-                <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</span>
-            </div>
-            <br/>
-            <div>
-                <span>Nested under:</span>
-                <select th:field="*{id}">
-                    <option th:each="ic : ${indentedCategories}" th:value="${ic.id}" th:text="${ic.name}">
-                    </option>
-                </select>
-            </div>
-            <br/>
-            <div>
-                <span><input type="submit" value="Update Category"/></span>
-            </div>
-        </fieldset>
-    </form>
-    <form id="updateForm" action="<%=request.getContextPath() + "/fc/admin/categories/updateCategory"%>">
-    <fieldset>
-        <legend>Edit Category</legend>
-        <p>
-            <label for="category_name">Name:</label>
-            <input type="text" name="category_name" value="${requestScope.categories[0].name}"/>
-            <input type="hidden" name="category_id" value="${requestScope.categories[0].category_id}"/>
-        </p>
-        <p>
-            <label for="parent_category_id">Nested under:</label>
-            <select name="parent_category_id">
-                <c:set var="descendants" value="${requestScope.categories[0].descendants}"/>
-                <c:forEach var="category" items="${applicationScope.categoryServer.indentedCategories}">
-                    <c:set var="selector" value="0"/>
-                <c:forEach var="descendant" items="${descendants}">
-                    <c:if test="${category.category_id == descendant.category_id}">
-                        <c:set var="selector" value="1"/>
-                    </c:if>
-                </c:forEach>
-                <c:if test="${category.category_id == requestScope.categories[0].parent.category_id}">
-                    <c:set var="selector" value="2"/>
-                </c:if>
-                <c:choose>
-                    <c:when test="${selector == 0}"><!-- normal -->
-                        <option value="${category.category_id}">${category.name}</option>
-                    </c:when>
-                    <c:when test="${selector == 1}"><!-- descendants are disabled (itself included) -->
-                        <option value="${category.category_id}" disabled>${category.name}</option>
-                    </c:when>
-                    <c:when test="${selector == 2}"><!-- parent is pre-selected -->
-                        <option value="${category.category_id}" selected>${category.name}</option>
-                    </c:when>
-                    <c:otherwise>
-                        <option value="error" selected>error</option>
-                    </c:otherwise>
-                </c:choose>
-            </c:forEach>
-        </select>
-    </p>
-    <p>
-        <input type="submit" value="Update"/>
-    </p>
-</fieldset>
-</form>
-<p><a th:href="@{/admin/categories}">go back</a></p>
-</body>
+        <h1>Category Edition Page</h1>
+        <form action="#" th:action="@{/admin/editCategory}" th:object="${category}" method="post">
+            <fieldset>
+                <div th:if="${#fields.hasErrors()}">
+                    <span class="validationError">Please correct the problems below and resubmit.</span>
+                </div>
+                <legend>Edit Category</legend>
+                <input type="hidden" th:field="*{id}"/>
+                <div>
+                    <span>Name:<input type="text" th:field="*{name}"/></span>
+                    <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</span>
+                </div>
+                <br/>
+                <div>
+                    <span>Nested under:</span>
+                    <select th:field="*{parent.id}">
+                        <option th:each="ic : ${indentedCategories}"
+                                th:value="${ic.id}"
+                                th:text="${ic.name}"
+                                th:selected="${ic.id==category.parent.id}"
+                                th:disabled="${descendants.contains(ic)}"/>
+                    </select>
+                </div>
+                <br/>
+                <div>
+                    <span><input type="submit" value="Update Category"/></span>
+                </div>
+            </fieldset>
+        </form>
+        <p><a th:href="@{/admin/categories}">go back</a></p>
+    </body>
 </html>
