--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -16,6 +16,7 @@
                 </div>
                 <legend>Edit Category</legend>
                 <input type="hidden" th:field="*{id}"/>
+                <input type="hidden" th:field="*{parent}"/>
                 <div>
                     <span>Name:<input type="text" th:field="*{name}"/></span>
                     <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</span>
@@ -28,7 +29,8 @@
                                 th:value="${ic.id}"
                                 th:text="${ic.name}"
                                 th:selected="${ic.id==category.parent.id}"
-                                th:disabled="${descendants.contains(ic)}"/>
+                                th:disabled="${descendants.contains(ic)}">
+                        </option>
                     </select>
                 </div>
                 <br/>
