Fixed bug on detecting tree structure modification (Added functionality to modify category properties other than tree structure)

--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -16,7 +16,7 @@
                 </div>
                 <legend>Edit Category</legend>
                 <input type="hidden" th:field="*{id}"/>
-                <input type="hidden" th:field="*{parent}"/>
+                <input type="hidden" th:field="*{parent.name}"/>
                 <div>
                     <span>Name:<input type="text" th:field="*{name}"/></span>
                     <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</span>
