loadCategories has been centralized

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -11,6 +11,6 @@
     <h3>welcome to <i>admin</i> main page</h3>
     <a th:href="@{/admin/books}">Books Manager</a>
     <br/>
-    <a th:href="@{/admin/categories}">Categories Manager</a>
+    <a th:href="@{/admin/loadCategories}">Categories Manager</a>
   </body>
 </html>
