--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -83,8 +83,9 @@
     <div class="main">
         <h2>Category Manager</h2>
         <p><a th:href="@{/admin}">go back</a></p>
+        <p><a th:href="@{/admin/loadCategories}">refresh</a></p>
         <p><a th:href="@{/admin/newCategory}">new category</a></p>
-        <p>Please, to edit some category just click on its link</p>
+        <p>Please, to edit or delete some category just click on its link</p>
     </div>
     <script>
         /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
