--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Book Edition Page</h1>
-        <form action="#" th:action="@{/admin/editBook}" th:object="${book}" method="post">
+        <form action="#" th:action="@{/admin/editBook}" th:object="${book}" method="POST">
             <fieldset>
                 <div th:if="${#fields.hasErrors()}">
                     <span class="validationError">Please correct the problems below and resubmit.</span>
