--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" th:href="@{/styles.css}" />
     </head>
     <body>
-        <form action="#" th:action="@{/admin/newBook}" th:object="${book}" method="post">
+        <form action="#" th:action="@{/admin/newBook}" th:object="${book}" method="POST">
         <fieldset>
             <div th:if="${#fields.hasErrors()}">
                 <span class="validationError">Please correct the problems below and resubmit.</span>
