-fixed problem loading .css file -new validationError style

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Admin</title>
-        <link rel="stylesheet" th:href="@{/styles.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />
     </head>
     <body>
         <h3>welcome to <i>admin</i> main page</h3>
