--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Books Manager</title>
-        <link rel="stylesheet" th:href="@{/styles.css}" />
+        <link type="text/css" rel="stylesheet" href="http://localhost:8080/firstmarket/fmstyle.css" />
     </head>
     <body>
         <h1>Books Manager</h1>
