--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Categories Manager</title>
-        <link rel="stylesheet" th:href="@{/styles.css}" />
+        <link type="text/css" rel="stylesheet" href="http://localhost:8080/firstmarket/fmstyle.css" />
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
             body {
