--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>New Category</title>
-        <link rel="stylesheet" th:href="@{/styles.css}" />
+        <link type="text/css" rel="stylesheet" href="http://localhost:8080/firstmarket/fmstyle.css" />
     </head>
     <body>
         <form action="#" th:action="@{/admin/newCategory}" th:object="${category}" method="POST">
