--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -10,9 +10,9 @@
     <body>
         <form action="#" th:action="@{/admin/newCategory}" th:object="${category}" method="POST">
         <fieldset>
-            <div th:if="${#fields.hasErrors()}">
-                <span class="validationError">Please correct the problems below and resubmit.</span>
-            </div>
+            <div class="validationErrorHead" th:if="${#fields.hasErrors()}">
+                <span>Please correct the problems below and resubmit.</span>
+            </div><br/>
             <legend>New Category Form</legend>
             <div>
                 <span>Name:<input type="text" th:field="*{name}"/></span>
